--- a/mini-project-1/src/index.css
+++ b/mini-project-1/src/index.css
@@ -6,12 +6,20 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 40px;
 }
-
+div{
+    text-align: center;
+    margin: 150px auto ;
+    width: 900px;
+    border: 5px solid rgba(255, 255, 255, 0.349);
+    background-color: rgba(255, 255, 255, 0.657);
+}
 h1{
-border: 5px solid black;
-background-color: rgb(233, 210, 233);
+    color: rgb(189, 128, 128);
+/* border: 5px solid black;
+background-color: #ffffff7c;
 text-align: center;
 height: 199px;
 width: 900px; 
 margin: auto;
+text-align: center; */
 }
