--- a/mini-project-1/src/index.css
+++ b/mini-project-1/src/index.css
@@ -12,6 +12,7 @@ div{
     width: 900px;
     border: 5px solid rgba(255, 255, 255, 0.349);
     background-color: rgba(255, 255, 255, 0.657);
+    border-radius: 5%;
 }
 h1{
     color: rgb(189, 128, 128);
